<resources>
    <string name="app_name">Bubble Penetration</string>
    <string name="action_settings">Settings</string>
    <string name="start_button_text">Start</string>
    <string name="preparation_ready">Get ready</string>
    <string name="preparation_collect">Collect</string>
    <string name="preparation_go">GO!</string>
    <string name="play_again_button_text">Play Again</string>
    <string name="highscore_button_text">Highscores</string>
    <string name="score_text">Score</string>
    <string name="timer_text">Time</string>
    <string name="timer_value">Time: %1$s</string>
    <string name="score_value">Score: %1$d</string>
    <string name="rank_value">%1$d</string>
    <string name="score_postfix_value">+%1$d</string>
    <string name="initial_score">0</string>
    <string name="game_over_text">Game Over</string>
    <string name="match_finished">Finished!</string>
    <string name="game_over_score_label">Your score:</string>
    <string name="save">Save</string>
    <string name="play_online">Play online</string>
    <string name="continue_offline">Play offline</string>
    <string name="your_name">Hello! &#x1F44B;</string>
    <string name="choose_nickname">Choose a nickname for the high score list</string>
    <string name="username_hint">Name</string>
    <string name="back_to_menu">Back</string>
    <string name="cancel">Cancel</string>
    <string name="music">Music</string>
    <string name="bubble_penetration">Bubble\nPenetration</string>
    <string name="rating">app rating</string>
    <string name="new_highscore">New Highscore!!</string>
    <string name="add">+</string>
    <string name="greeting">Welcome back! &#x1F44B;</string>
    <string name="who_is_playing">Who\'s playing?</string>
    <string name="effects">Effects</string>
    <string name="vibration">Vibration</string>
    <string name="use_online_leaderboard">Use online leaderboard</string>
    <string name="settings_icon">⚙</string>
    <string name="game_server_address">Leaderboard address</string>
    <string name="reset_server_address">Standard</string>
    <string name="connection_successful">Connection successful!</string>
    <string name="connection_failed">Connection failed.</string>
    <string name="invalid_backend_url">Enter a valid HTTPS URL.</string>
    <string name="empty_highscores">&#x1F3C6; No highscores yet – grab first place!</string>
    <string name="no_champion">No current champion…</string>
    <string name="website">Website</string>
    <string name="main_menu">main menu</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="champion_label">Champion:\n%1$s with %2$s !</string>
    <string name="server_unavailable_offline">Server is not available, offline game progress is being used.</string>
    <plurals name="rate_limit_retry">
        <item quantity="one">That was a little too fast. Please try again in %d second.</item>
        <item quantity="other">That was a little too fast. Please try again in %d seconds.</item>
    </plurals>
    <string name="rate_limit_retry_minutes">That was a little too fast. Please try again in %1$d min %2$d sec.</string>
    <string name="rate_limit_profile_retry">Too many online profiles from this connection. You can play offline now or try again in %1$d min.</string>
    <string name="error_empty_username">Sorry, username cannot be empty!</string>
    <string name="error_username_too_long">Sorry, maximum 12 characters!</string>
    <string name="error_username_exists">Name is already in use.</string>
    <string name="error_username_not_allowed">This username is not allowed. Please choose another.</string>
    <string name="error_username_invalid_format">Use allowed characters and start and end with a letter, number, mark, or emoji.</string>
    <string name="error_username_no_letter">The username must contain at least one letter.</string>
    <string name="error_username_inappropriate">This username was rejected by the content filter.</string>
    <string name="error_username_validation_unavailable">Username validation is unavailable. The profile was created offline.</string>
    <string name="profile_name_taken_available_offline">Name is already in use, the profile will be used locally.</string>
    <string name="error_market_app_not_found">Unable to find market app.</string>
    <string name="msg_new_rank">&#x1F3C6;\n\nGreat!\nCheck your new rank!</string>
    <string name="msg_try_again">You were better… try again!</string>
    <string name="msg_your_score">Your score</string>
    <string name="combo_build">BUILD COMBO</string>
    <string name="combo">COMBO</string>
    <string name="combo_hot_streak">WOW</string>
    <string name="combo_on_fire">YEAH!</string>
    <string name="combo_mega">MEGA!!!</string>
    <string name="backend_default_url" translatable="false">https://bubble.lukas-scheerer.de</string>
</resources>
