<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clickable="false">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textAlignment="viewStart"
                android:id="@+id/table_rank"
                android:enabled="true"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:id="@+id/table_name"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textAlignment="center"
                android:enabled="true"
                android:gravity="center_horizontal"
                android:maxLines="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:id="@+id/table_score"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textAlignment="viewEnd"
                android:enabled="true"
                android:gravity="end|center_vertical"
                android:maxLines="1"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"/>
    </LinearLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/highscore_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="16dp"/>
        <TextView
                android:id="@+id/empty_highscores_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:paddingTop="40dp"
                android:text="@string/empty_highscores"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="gone"/>
    </FrameLayout>
    <Button
                    style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/highscore_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8sp"
            android:background="@drawable/button"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:onClick="backToMenu"
            android:text="@string/back_to_menu"
            android:textColor="@color/gold"
            android:textSize="24sp"/>
</LinearLayout>
