<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/menuGLSurfaceViewHolder"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/menu_title"
                android:text="@string/bubble_penetration"
                android:textColor="#ec5108ff"
                android:textSize="48sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:enabled="true"
                android:layout_marginBottom="16sp"/>
        <Button
                android:id="@+id/start_button"
                android:text="@string/start_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:onClick="startGame"
                android:background="@drawable/button"
                android:enabled="true"
                android:alpha="0.9"
                android:textColor="@color/gold"
                android:clickable="true"
                android:layout_margin="8dp"
                android:focusable="true"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:id="@+id/highscore_button"
                android:text="@string/highscore_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@drawable/button"
                android:onClick="showHighscores"
                android:enabled="true"
                android:textColor="@color/gold"
                android:alpha="0.9"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:id="@+id/champion_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="12sp"
                android:textAlignment="center"
                android:textColor="@color/gold"
                android:textSize="28sp"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_username"
            android:layout_gravity="start|bottom"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:onClick="showUsernameSelectionScreen"
            android:layout_marginLeft="8sp"
            android:layout_marginBottom="8sp"
            android:clickable="true"
            android:enabled="true"
            android:layout_marginStart="8sp"
            android:focusable="true"
            android:layout_alignParentBottom="true"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:id="@+id/music_box"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checked="true"
                android:onClick="setMusic"
                android:enabled="true"
                android:layout_marginRight="8sp"
                android:layout_marginEnd="8sp"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/effects"
                android:id="@+id/effects_box"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:checked="true"
                android:enabled="true"
                android:onClick="setEffects"
                android:layout_marginRight="8sp"
                android:layout_marginEnd="8sp"
                android:layout_marginBottom="8sp"/>
    </LinearLayout>
</RelativeLayout>
